experimental support for https

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locomotive",
-  "version": "0.5.3",
+  "version": "0.6.0-alpha",
   "description": "Powerful MVC web framework for Node.js.",
   "keywords": [
     "express",
