--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: "node_js"
+language: node_js
 node_js:
   - "6"
   - "5"
@@ -7,11 +7,9 @@ node_js:
   - "0.10"
   - "iojs"
 
-before_install:
- - "npm install istanbul -g"
- - "npm install coveralls -g"
-
-script: "make ci-travis"
+script:
+  - npm test
+  - npm run coverage
 
 after_success:
-  - "make submit-cov-to-coveralls"
+  - npm run send-coverage
